Reworked models to work with tools
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>